# backend

./: .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  example.env  main.py  pyproject.toml
.github/workflows/: qodana_code_quality.yml
alembic/: env.py
alembic/versions/: 2023_10_24_2244-776fc88b7567_create_database.py  2023_10_24_2311-e6d251b458b1_create_tables.py  2023_10_25_1643-5fa3d1711c01_change_id_from_model_id_to_id_and_.py  2023_10_25_1729-f9862d1fba81_create_db.py  2023_11_14_0015-0487f0685ff7_remove_used_id_in_addresses.py  2023_11_14_0020-b9c292239722_add_cities.py  2023_11_14_0023-6e19ba729787_add_user_adreses.py  2023_11_14_0126-aa075accd1a6_create_db.py  2023_11_14_1607-981be90b1365_create_cafe_locations.py  2023_11_21_1824-b9409e71a97d_telephone_is_string_now.py  2023_11_27_1726-1344838eec02_add_verification_code_table.py  2023_11_27_2024-a7a0ede35f06_email_instead_of_telephone.py  2023_11_27_2255-6161966d6f23_created_at_and_expire_at_are_useless_.py  2023_11_29_1133-24e9ddae6e90_secret_instead_of_code_in_.py  2023_11_29_2254-b0b18432db57_add_relationship_between_order_and_.py  2023_12_05_0040-7df2c2bcaa12_fix_relationship_between_order_and_.py  2023_12_06_0155-2202e148f390_promocode_code_indexed_add_img_source.py  2023_12_06_1418-a811ec57c2a8_add_userrole.py  2023_12_06_1738-b1d535c5c8df_add_img_source_to_pizzas.py  2023_12_11_0327-10453e8b27dd_only_admins_in_userrole.py
auth/security/: email_operations.py  random_code_gen.py  token.py
core/: config.py
core/models/: __init__.py  addresses.py  base.py  cafe_locations.py  cities.py  order_items.py  orders.py  pizzas.py  promo_codes.py  user_addresses.py  user_roles.py  users.py  verification_codes.py
crud/: cafe_locations_crud.py  cities_crud.py  order_crud.py  order_items_crud.py  pizzas_crud.py  promo_code_crud.py  user_role_crud.py  users_crud.py  verification_codes_crud.py
middlewares/: get_user_middleware.py
models/: addresses.py  default_pizza.py  order_items.py  orders.py  pizzas.py  promo_codes.py  users.py
routers/: admin_router.py  auth_router.py  cafe_locations_router.py  cities_router.py  order_router.py  pizza_router.py  promo_code_router.py  users_router.py
schemas/: addresses_schema.py  cafe_locations_schemas.py  cities_schema.py  order_items_schema.py  orders_schema.py  pizzas_schema.py  promo_codes_schema.py  users_schema.py  verification_codes_schema.py
utils/: create_all_tables.py  database_orm.py  get_db.py
