[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Stepanov Mikhail <volodya-stepanov-68@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
sqlalchemy = "^2.0.22"
pydantic = { extras = ["email"], version = "^2.5.2" }
alembic = "^1.12.0"
pydantic-settings = "^2.0.3"
pydantic-extra-types = "^2.1.0"
phonenumbers = "^8.13.23"
psycopg2-binary = "^2.9.9"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pyotp = "^2.9.0"
pendulum = "^2.1.2"
python-multipart = "^0.0.7"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
pre-commit = "^3.5.0"
conventional-pre-commit = "^2.4.0"
mypy = "^1.6.0"
typos = "^1.16.20"
ruff = "^0.1.1"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.typos]
files.extend-exclude = [
    "alembic/versions/*"
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
